IMAP: handle deprecated Delete right when checking ACL before expunge

Due to ambiguity in RFC 2086 the new RFC 4314 introduced two virtual
rights, one of them being "d" (delete). When "d" right is present,
presence of "e", "t" and "x" rights must be assumed by the clients.

Courier IMAP server uses this virtual rights but does not explicitly list
the "e" (expunge) right like most other servers, which caused RetrieveItemsTask
to not trigger EXPUNGE before syncing the mailbox.

BUG: 354056
FIXED-IN: 16.04.0